# isolate

./: .gitignore  .travis.yml  Makefile  NEWS  README.md  TODO  capabilities.c  cg.c  cleanup  config.c  config.h  daemon.py  default.cf  default.cf.in  default.cfg  flake.nix  isolate-cg-keeper.8.txt  isolate-cg-keeper.c  isolate-check-environment  isolate-check-environment.8.txt  isolate.1.txt  isolate.c  isolate.h  isolate.spec  meson.build  meson.options  package.nix  prepare  rules.c  sd_notify.c  sd_notify.h  util.c  x.c
.github/workflows/: docker-image-alpine.yml  docker-image.yml  package_release.yml  package_test.yml
debian/: changelog  control  copyright  isolate.lintian-overrides  isolate.lintian-overrides.trixie  isolate.postinst  isolate.postrm  rules  rules.trixie
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.alpine.dockerignore  commands.sh  start_isolate.sh
systemd/: isolate.service  isolate.service.in  isolate.slice  meson.build
